--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "api": "json-server --watch db.json"
   },
   "dependencies": {
+    "@types/marked": "^4.0.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.26.0",
+    "json-server": "^0.17.0",
+    "marked": "^4.0.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
